update default link color

--- a/src/index.scss
+++ b/src/index.scss
@@ -99,6 +99,7 @@
 			line-height: 17px;
 			text-decoration: underline;
 			text-underline-offset: 9px;
+			color: #000000;
 
 			@include media('small') {
 				color: #FFF;
